# cgci

./: .gitignore  CMakeLists.txt  LICENSE  README.md  base.css  build_litexl.sh  build_polecat.sh  cgcirc
src/: CMakeLists.txt  build.c  build.h  cgci.c  cgci.h  config.c  config.h  context.c  context.h  env.c  env.h  fs.c  fs.h  parser.c  parser.h  ui.c  ui.h
